Fix: Row gaps for hbank dashboard

--- a/main.scss
+++ b/main.scss
@@ -71,8 +71,8 @@ header {
 
 main {
    border-top: 1px solid $border-color;
-   @include flex-container();
    display: grid;
+   gap: 2rem 1.5rem;
    grid-template-areas: "nav card"
                         "nav inventory";
    align-items: start;
@@ -497,8 +497,6 @@ nav a {
 @media screen and (min-width: 1024px) {
     
     main {
-        display: grid;
-        gap: 1.5rem;
         grid-template-areas: "nav inventory card";
         grid-template-columns: 13.75rem 1fr 20.75rem;
         align-items: stretch;
